Multi-level Stage::initOwner can crash gnome-shell or X.org server

XMLWordPrintable

        When a stage has multi levels of initOwner and it's closed before it's children it causes a crash on gnome-shell and sometimes X.org.


        To reproduce:
        1) Run the sample
        2) Close the first stage entitled "Close me first"

        Reproducible with gtk2 (-Djdk.gtk.version=2) and gtk3.

          1. InitOwnerCrash.java
            1 kB
            Thiago Sayao
          2. InitOwnerCrash.java
            1 kB
            Thiago Sayao

              Assignee:
              Thiago Sayao
              Reporter:
              Thiago Sayao
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: