8226537: Multi-level Stage::initOwner can crash gnome-shell or X.org server

Reviewed-by: kcr, pbansal